# pico-sdk-pedantic

./: .gitignore  Makefile  README.md  mc.yaml
.github/workflows/: ci.yaml
blink.c/: CMakeLists.txt  blink.c
blink.c++/: CMakeLists.txt  blink.c++
